--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,3 +31,13 @@ body {
     width: 100%;
     background-size: contain;
 }
+
+.circle-sizer {
+    width: 25%;
+    /* height: auto; */
+    /* height: 100%; */
+    height: 25%;
+    /* padding: auto; */
+    text-align: center;
+    padding: 20px;
+}
