--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ body {
     background-color: #31708e;
 }
 
+.bg-blue {
+    background-color: #5085a5;
+}
+
 .bg-lightblue {
     background-color: #8fc1e3;
 }
