--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,3 +59,11 @@ body {
     text-align: center;
     padding: 80px 0px;
 }
+
+.text-roboto {
+    font-family: 'Roboto', sans-serif;
+}
+
+.text-robCondensed {
+    font-family: 'Roboto Condensed', sans-serif;
+}
