--- a/assets/css/youtube.css
+++ b/assets/css/youtube.css
@@ -2,15 +2,27 @@
     margin-bottom: 20px;
 }
 
-/* #vid-display {
-    height: 100%;
+#vid-display {
+    /* height: 100%;
     height: 380px;
     width: 100%;
-    width: 340px;
-} */
+    width: 340px; */
+    position: relative;
+    height: 380px;
+    /* width: 90%; */
+}
 
 .display {
-    height: 340px;
+    position: absolute;
+    /* height: 340px; */
+    /* height: 360px; */
+    /* height: auto; */
+    height: 100%;
     /* width: 360px; */
-    width: 415px;
+    /* width: 415px; */
+    /* max-width: 600px; */
+    /* min-width: 400px; */
+    /* max-width: 600px; */
+    /* width: 100%; */
+    width: 94%;
 }
