Add icons for social media authentication. Still need to add functionality.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,3 +67,8 @@ body {
 .text-robCondensed {
     font-family: 'Roboto Condensed', sans-serif;
 }
+
+.icon-sizer {
+    width: 50%;
+    height: auto;
+}
