--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,3 +67,9 @@ body {
 .text-robCondensed {
     font-family: 'Roboto Condensed', sans-serif;
 }
+
+.header {
+    /* font-size: 50px; */
+    padding: 2rem 2rem;
+    font-weight: bold;
+}
