--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,5 +71,8 @@ body {
 .header {
     /* font-size: 50px; */
     padding: 2rem 2rem;
-    font-weight: bold;
+}
+
+.bg {
+    background-color: rgb(219, 219, 219);
 }
