--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,11 @@ body {
     padding: 2rem 2rem;
 }
 
-.bg {
+/* .bg {
     background-color: rgb(219, 219, 219);
+} */
+
+.container {
+    border: 1px solid rgb(219, 219, 219);
+    background-color: #f7f9fb;
 }
