--- a/assets/css/googlebutton.css
+++ b/assets/css/googlebutton.css
@@ -2,7 +2,7 @@
       display: inline-block;
       background: white;
       color: #444;
-      width: 190px;
+      width: 236px;
       border-radius: 5px;
       border: thin solid #888;
       box-shadow: 1px 1px 1px grey;
@@ -16,7 +16,7 @@
       font-weight: normal;
     }
     span.icon {
-      background: url('/identity/sign-in/g-normal.png') transparent 5px 50% no-repeat;
+      background: url('/assets/g-normal.png') transparent 5px 50% no-repeat;
       display: inline-block;
       vertical-align: middle;
       width: 42px;
