--- a/assets/css/googlebutton.css
+++ b/assets/css/googlebutton.css
@@ -16,7 +16,7 @@
       font-weight: normal;
     }
     span.icon {
-      background: url('/assets/g-normal.png') transparent 5px 50% no-repeat;
+      background: url('/assets/images/g-normal.png') transparent 5px 50% no-repeat;
       display: inline-block;
       vertical-align: middle;
       width: 42px;
