--- a/tests/YouTube/Me/yt-api.css
+++ b/tests/YouTube/Me/yt-api.css
@@ -1,3 +1,6 @@
+/* <!-- EXCESS CODE - USED FOR TESTING PURPOSES-->
+<!-- LEFT IN FOR FEAR OF BREAKING CODE --> */
+
 .space {
     margin-bottom: 20px;
 }
